k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-worker

spec:
  replicas: 1

  selector:
    matchLabels:
      app: task-worker

  template:
    metadata:
      labels:
        app: task-worker

    spec:
      containers:
      - name: task-worker
        image: task-worker:1.0
        imagePullPolicy: Never
