k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-api
  namespace: task-platform
spec:
  replicas: 1

  selector:
    matchLabels:
      app: task-api

  template:
    metadata:
      labels:
        app: task-api

    spec:
      containers:
      - name: task-api
        image: task-api:2.0
        imagePullPolicy: Never

        ports:
        - containerPort: 8000

        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

---
apiVersion: v1
kind: Service
metadata:
  name: task-api
  namespace: task-platform

spec:
  selector:
    app: task-api

  ports:
  - port: 8000
    targetPort: 8000

  type: NodePort
