k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: task-api-ingress
  namespace: task-platform

spec:
  ingressClassName: nginx

  rules:
  - host: task-api.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: task-api
            port:
              number: 8000
